--- a/lina_dicto/overwrite/css/platform.css
+++ b/lina_dicto/overwrite/css/platform.css
@@ -6,11 +6,11 @@
 
 #query-area__query-input__input{
 	/* 入力欄Element(<input>) */
-	max-width: 80%
+	max-width: calc(100% - 70px);
 }
 
 #query-area__query-input__button{
 	display: inline;
-	max-width: 15%;
+	max-width: 60px;
 }
 
