--- a/lina_dicto/overwrite/css/platform.css
+++ b/lina_dicto/overwrite/css/platform.css
@@ -6,11 +6,11 @@
 
 #query-area__query-input__input{
 	/* 入力欄Element(<input>) */
-	max-width: calc(100% - 70px);
+	max-width: calc(100%);
 }
 
 #query-area__query-input__button{
-	display: inline;
+	display: none;
 	max-width: 60px;
 }
 
